// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-direct-children works with deeper paths 1`] = `
Array [
  "test2",
  "test3",
]
`;

exports[`get-direct-children works with root path 1`] = `
Array [
  "test",
  "test2",
]
`;

exports[`get-direct-children works with sub paths 1`] = `
Array [
  "test2",
]
`;
